--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   height: 95%;
   width: 100%;
   font-family: sans-serif;
-  background-image: url('http://addyosmani.com/blog/wp-content/uploads/2013/04/unicorn.jpg');
+  background-color: #6699FF
 }
 
 .main-container {
@@ -28,7 +28,19 @@ body {
 }
 
 p{
+  width: 100%;
+  height: 50px;
   text-align: center;
-  margin: 3px 0;
+  margin-left: 3px 0;
+  padding-left: 5px;
   font-size: 17px;
+  font-family: tahoma;
+}
+
+.timeStamp {
+  font-size: 12px;
+  font-family: tahoma;
+  font-color: navy;
+  border: 2px;
+
 }
